@@ -1,3 +1,8 @@
+2002-02-05  Johan Dahlin  <jdahlin@telia.com>
+
+	* examples/pygtk-demo/demos/list_store.py: add toggle for the check
+	box column.
+
 2002-02-05  James Henstridge  <james@daa.com.au>
 
 	* codegen/codegen.py (register_types): register pointer types as
